# Numpy-Array

./: README.md  chess_board.ipynb  pyproject.toml
