[tool.poetry]
name = "numpy-array"
version = "0.1.0"
description = ""
authors = ["Yahialabeeb <yahia.labeeb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.3"
matplotlib = "^3.4.3"
numpy = "^1.21.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
